# rtevl-eng-std-service-sentence

./: readme  service_name
src/: CMakeLists.txt  test.cpp
src/ai_model/: md5.txt  param.json  speech_evaluator.h  text.json
src/ai_model/models/online_v1.9.0.cn.native/: cfg_cn.json  online_v1.9.0.cn_native.res  tone.mnn
src/ai_model/models/online_v1.9.0.en.native/: cfg_en.json  decoder.mnn  dnn_gop_en_snt.mnn  encoder.mnn
